--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,13 @@
 body {
-    background-image: url(../images/background.jpg);
+    background-image: url("../images/background.jpg");
     background-size: cover; 
-    font-family: 'Open Sans', sans-serif;
 }
 
 .navbar {
-    background-color: #8B4513;
+    background-color: black;
     opacity: 0.7; 
-    font-size: 20px;   
+    font-size: 20px;  
+    font-family: 'Open Sans', sans-serif; 
 }
 
 a:link, a:visited {
@@ -15,20 +15,29 @@ a:link, a:visited {
     color: white!important; 
 }
 
+a:hover {
+    background-color: #00008B !important; 
+}
+
+.biobox {
+    color: beige; 
+    font-size: 25px;
+    font-family: 'Poppins', sans-serif !important;
+}
+
 .biorow {
-    border: 2px solid #8B4513;
-    background-color: #00008B; 
+    border: 2px solid black;
+    background-color: rgba(0,51,102,0.8);
     height: 75%;
-    width: 75%; 
+    width: 76%; 
     padding: 50px; 
     margin-top: 30px; 
     font-family: 'Open Sans', sans-serif;
-    opacity: 0.8; 
     border-radius: 10px; 
     text-align: center;
     position: absolute;
-    margin-left: auto;
-    margin-right: auto; 
+    margin-left: 12%;
+    margin-right: 12%; 
 }
 
 
@@ -47,47 +56,134 @@ a:link, a:visited {
 #biobuild {
     font-family: 'Crete Round', serif;
     font-size: 40px; 
-    line-height: 1.4; 
+    line-height: 2.0; 
     padding-top: 10px; 
     color: #FFF8DC; 
     
 }
 
 .button {
-    background-color: #FFF8DC;
+    background-color: #90EE90;
     font-family: 'Open Sans', sans-serif;
     font-weight: bolder !important; 
-    border: 2px solid #8B4513!important; 
+    border: 2px solid black!important; 
     border-radius: 10px; 
-    color: #8B4513 !important; 
+    color: black!important; 
     font-size: 25px !important;
     display: block;
     position: absolute;
     right: 40%; 
-    bottom: 10%; 
+    bottom: 5%; 
     width: 200px;
     height: 70px; 
+    margin-top: 20px; 
+    margin-bottom: 5px; 
+}
+
+.profilepic {
+    float: left;
+    padding: 5px; 
+    height: 45%;
+    width: 25%; 
+}
+
+@media (max-width: 1095px) {
+
+    .bioname {
+        font-size: 40px;
+    }
+
+    #biobuild {
+        font-size: 35px; 
+    }
 
 }
 
-.footer {
-    position: fixed;
-    left: 5%;
-    right: 5%; 
-    bottom: 2%; 
-    height: 12%; 
-    width: 90%;
-    color: white;
-    text-align: center;
-    border-radius: 10px; 
-    border: 2px solid black;
-    background-color: #D3D3D3;
-    opacity: 0.8 !important; 
+@media (max-width: 1030px) {
+
+    .button {
+        right: 35%; 
+    }
+
 }
 
-.connect {
-    font-family: 'Crete Round', serif;
-    color: #191970; 
-    font-size: 30px; 
-    font-weight: bold; 
+@media (max-width: 725px) {
+
+    .biorow{
+        height: 80%; 
+    }
+    .bioname {
+        font-size: 40px;
+    }
+
+    #biobuild {
+        font-size: 30px; 
+
+    }
+    .button {
+        right: 31%; 
+    }
+
+}
+
+@media (max-width: 725px) {
+
+    .bioname {
+        font-size: 30px;
+    }
+
+    #biobuild {
+        font-size: 25px; 
+
+    }
+
+}
+
+@media (max-width: 600px) {
+
+    .bioname {
+        font-size: 30px;
+    }
+
+    #biobuild {
+        font-size: 25px; 
+
+    }
+
+    .biorow{
+        height: 90%; 
+    }
+
+    .button {
+        right: 35%; 
+        width: 150px;
+        height: 50px; 
+        font-size: 20px !important;
+
+    }
+
+}
+
+@media (max-width: 400px) {
+
+    .bioname {
+        font-size: 30px;
+    }
+
+    #biobuild {
+        font-size: 20px; 
+
+    }
+
+    .biorow{
+        height: 90%; 
+    }
+
+    .button {
+        right: 23%; 
+        width: 150px;
+        height: 50px; 
+        font-size: 20px !important;
+    }
+
 }
