--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -22,7 +22,7 @@ a.navbutton:hover {
 
 a.navbutton:link, a.navbutton:visited {
     opacity: 1.5 !important;
-    color: white!important; 
+    color: #FFD700!important; 
 }
 
 .trivia {
