--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -1,7 +1,7 @@
 body {
     background-image: url("../images/background.jpg") ;
     background-size: cover; 
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Merriweather', serif;
 }
 
 .navbar {
@@ -9,6 +9,7 @@ body {
     opacity: 0.7; 
     font-size: 20px;  
     border-bottom: 3px solid gray !important;  
+    font-family: 'Merriweather', serif;
 }
 
 a:link, a:visited {
@@ -17,7 +18,7 @@ a:link, a:visited {
 }
 
 a.navbutton:hover {
-    background-color: midnightblue !important; 
+    background-color: white !important; 
 }
 
 a.navbutton:link, a.navbutton:visited {
@@ -41,7 +42,7 @@ a.navbutton:link, a.navbutton:visited {
     background-size: cover; 
     border: 3px solid black !important;
     color: black !important; 
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Merriweather', serif;
     font-size: 30px; 
     text-align: center; 
 }
@@ -53,15 +54,19 @@ a.navbutton:link, a.navbutton:visited {
 .drop1, .drop2, .drop3, .drop4 {
     padding: 10px;
     display: none; 
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Merriweather', serif;
     font-size: 20px; 
 }
 
 #flip1, #flip2, #flip3, #flip4 {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Merriweather', serif;
     font-size: 15px; 
 }
 
 .wording {
     font-family: 'Crete Round', serif;
+}
+
+.here {
+    text-decoration: underline; 
 }
