--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,11 +7,11 @@ body {
     background-color: black;
     opacity: 0.7; 
     font-size: 20px;  
-    font-family: 'Open Sans', sans-serif; 
+    font-family: 'Merriweather', serif;
 }
 
 a.navbutton:hover {
-    background-color: midnightblue !important; 
+    background-color: white!important; 
 }
 
 a.na
@@ -34,7 +34,7 @@ a.navbutton:link, a.navbutton:visited {
     width: 76%; 
     padding: 50px; 
     margin-top: 30px; 
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Merriweather', serif;
     border-radius: 10px; 
     text-align: center;
     position: absolute;
@@ -44,7 +44,7 @@ a.navbutton:link, a.navbutton:visited {
 
 
 .bioname {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Merriweather', serif;
     color: #FFD700; 
     font-weight: bold; 
     font-size: 55px; 
@@ -65,12 +65,12 @@ a.navbutton:link, a.navbutton:visited {
 }
 
 .button {
-    background-color: #FFD700;
-    font-family: 'Open Sans', sans-serif;
+    background-color: transparent; 
+    font-family: 'Merriweather', serif;
     font-weight: bolder !important; 
-    border: 2px solid black!important; 
+    border: 2px solid beige !important; 
     border-radius: 10px; 
-    color: black!important; 
+    color: beige !important; 
     font-size: 1.8vw !important;
     display: block;
     position: absolute;
@@ -94,6 +94,7 @@ a.navbutton:link, a.navbutton:visited {
 .bio {
     color: 	#FFF8DC; 
     font-size: 100%; 
+    font-family: 'Merriweather', serif;
 }
 
 .connect {
