--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -16,6 +16,7 @@ body {
 a:link, a:visited {
     opacity: 1.5 !important;
     color: black!important; 
+    text-decoration: none;
 }
 
 a.navbutton:hover {
@@ -25,6 +26,12 @@ a.navbutton:hover {
 a.navbutton:link, a.navbutton:visited {
     opacity: 1.5 !important;
     color: rgba(114,140,140,1.0)!important;
+}
+
+a.nav-name {
+    font-size: 30px !important;
+    color: rgb(213, 231, 216) !important; 
+    padding-top: 5px;
 }
 
 .triviapic {
