--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -1,16 +1,16 @@
 body {
     background-image: url("../images/pexels-photo-479453.jpeg") ;
     background-size: cover; 
-    font-family: 'Merriweather', serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
 
 .navbar {
     background-color: black;
     opacity: 1.0; 
-    font-size: 20px;  
+    font-size: 15px;  
     border-bottom: 3px solid gray !important;  
-    font-family: 'Merriweather', serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
 a:link, a:visited {
@@ -25,13 +25,14 @@ a.navbutton:hover {
 
 a.navbutton:link, a.navbutton:visited {
     opacity: 1.5 !important;
-    color: rgba(114,140,140,1.0)!important;
+    color: #8D8C8A !important;
 }
 
-a.nav-name {
+a.nav-name, a.nav-name:hover {
     font-size: 30px !important;
-    color: rgb(213, 231, 216) !important; 
+    color: #8D8C8A!important;  
     padding-top: 5px;
+    text-decoration: none; 
 }
 
 .triviapic {
@@ -78,11 +79,11 @@ a.nav-name {
 
 
 .trivia, .train, .crystal, .project, .mamazon, .friendfinder {
-    background-color: rgba(114,140,140,1.0)!important;
+    background-color: #8D8C8A !important;
     background-size: cover; 
     border: 3px solid black !important;
     color: black !important; 
-    font-family: 'Merriweather', serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 23px; 
     text-align: center; 
     min-height: 300px !important; 
@@ -92,19 +93,19 @@ a.nav-name {
 
 .drop1, .drop2, .drop3, .drop4, .drop5, .drop6 {
     display: none; 
-    font-family: 'Merriweather', serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 15px; 
     line-height: 1.5;
     padding: 5px; 
 }
 
 #flip1, #flip2, #flip3, #flip4, #flip5, #flip6 {
-    font-family: 'Merriweather', serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 15px; 
 }
 
 .wording {
-    font-family: 'Crete Round', serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .here {
