--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,8 +6,8 @@ body {
 .navbar {
     background-color: black;
     opacity: 1.5; 
-    font-size: 20px;  
-    font-family: 'Merriweather', serif;
+    font-size: 15px;  
+    font-family: 'Montserrat', sans-serif;
     border-bottom: 3px solid gray !important; 
 }
 
@@ -16,35 +16,34 @@ a.navbutton:hover {
     text-decoration: none; 
 }
 
-a.nav-name {
+a.nav-name, a.nav-name:hover {
     font-size: 30px !important;
-    color: rgb(213, 231, 216) !important; 
-    padding-top: 5px;
+    color: #8D8C8A!important;  
+    padding-top: 15px;
+    text-decoration: none; 
 }
 
 a.navbutton:link, a.navbutton:visited {
     opacity: 1.5 !important;
-    color: rgba(114,140,140,1.0)!important; 
+    color: #8D8C8A !important; 
     text-decoration: none;
 }
 
 
-
 .biobox {
     color: beige; 
-    font-size: 25px;
-    font-family: 'Poppins', sans-serif !important;
+    font-size: 10px;
+    font-family: 'Montserrat', sans-serif !important;
 }
 
 .biorow, .aboutrow {
     border: 2px solid black;
-    background-color: rgba(114,140,140,0.9);
+    background-color: white;
     height: 75%;
     width: 76%; 
-    padding: 50px; 
+    padding: 70px 20px 50px 20px; 
     margin-top: 30px; 
-    font-family: 'Merriweather', serif;
-    border-radius: 10px; 
+    font-family: 'Montserrat', sans-serif;
     text-align: center;
     position: absolute;
     margin-left: 12%;
@@ -53,10 +52,10 @@ a.navbutton:link, a.navbutton:visited {
 
 
 .bioname {
-    font-family: 'Merriweather', serif;
+    font-family: 'Montserrat', sans-serif;
     color: black; 
     font-weight: bold; 
-    font-size: 55px; 
+    font-size: 40px; 
     padding-top: 10px;
     padding-bottom: 20px; 
     margin: 0 auto; 
@@ -65,7 +64,7 @@ a.navbutton:link, a.navbutton:visited {
 }
 
 #biobuild {
-    font-family: 'Crete Round', serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 40px; 
     line-height: 2.0; 
     padding-top: 10px; 
@@ -75,7 +74,7 @@ a.navbutton:link, a.navbutton:visited {
 
 .button {
     background-color: transparent; 
-    font-family: 'Merriweather', serif;
+    font-family: 'Montserrat', sans-serif;
     font-weight: bolder !important; 
     border: 2px solid black !important;
     border-radius: 10px; 
@@ -96,14 +95,16 @@ a.navbutton:link, a.navbutton:visited {
 .profilepic {
     float: left;
     padding: 5px; 
-    height: 45%;
-    width: 25%; 
+    height: 250px;
+    width: 250px; 
 }
 
 .bio {
     color: 	black; 
-    font-size: 100%; 
-    font-family: 'Merriweather', serif;
+    float: left;
+    font-size: 20px; 
+    font-family: 'Montserrat', sans-serif;
+    margin: 5px; 
 }
 
 .connect {
