--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -35,6 +35,11 @@ a.nav-name, a.nav-name:hover {
     text-decoration: none; 
 }
 
+.biorow {
+    margin-bottom: 5px; 
+    padding: 20px; 
+}
+
 .triviapic {
     background-image: url("../images/pexels-photo-132340.jpeg");
     background-size: cover; 
@@ -110,6 +115,21 @@ a.nav-name, a.nav-name:hover {
 
 .here {
     text-decoration: underline; 
+}
+
+#footer {
+    font-family: 'Montserrat', sans-serif;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 30px; 
+    background-color: black;
+    color: #cccccc;
+    text-align: center;
+    padding: 5px 5px 5px 5px; 
+    font-size: 10px; 
+    border-top: 5px solid black;
 }
 
 
