--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,6 +128,21 @@ a.email:link, a.email:visited {
     color: rgb(5, 96, 187) !important;
 }
 
+#footer {
+    font-family: 'Montserrat', sans-serif;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 30px; 
+    background-color: black;
+    color: #cccccc;
+    text-align: center;
+    padding: 5px 5px 5px 5px; 
+    font-size: 10px; 
+    border-top: 5px solid black;
+}
+
 @media (max-width: 1095px) {
 
     .bioname {
