--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -35,7 +35,7 @@ a.nav-name, a.nav-name:hover {
     text-decoration: none; 
 }
 
-.biorow {
+.container {
     margin-bottom: 5px; 
     padding: 20px; 
 }
