--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,20 +36,9 @@ a.navbutton:link, a.navbutton:visited {
     font-family: 'Montserrat', sans-serif !important;
 }
 
-.biorow, .aboutrow {
-    border: 2px solid black;
-    background-color: white;
-    height: 75%;
-    width: 76%; 
-    padding: 70px 20px 50px 20px; 
-    margin-top: 30px; 
-    font-family: 'Montserrat', sans-serif;
-    text-align: center;
-    position: absolute;
-    margin-left: 12%;
-    margin-right: 12%; 
+.jumbotron {
+    min-height: 500px !important;
 }
-
 
 .bioname {
     font-family: 'Montserrat', sans-serif;
@@ -143,137 +132,64 @@ a.email:link, a.email:visited {
     border-top: 5px solid black;
 }
 
-@media (max-width: 1095px) {
 
+
+@media (max-width: 1000px) {
+   
     .bioname {
-        font-size: 40px;
+        font-size: 25px !important;
+        padding: 20px; 
     }
 
     #biobuild {
-        font-size: 35px; 
-    }
-
-}
-
-@media (max-width: 1030px) {
-    .bio {
-        font-size: 2.4vw; 
-    }
-    .biorow, .aboutrow {
-        padding-top: 40px; 
-    }
-
-}
-
-@media (max-width: 725px) {
-
-    .biorow, .aboutrow {
-        height: 80%;
-        padding: 10px;  
-    }
-    .bioname {
-        font-size: 40px;
-        padding-top: 20px; 
-        padding-bottom: 40px; 
-    }
-
-    #biobuild {
-        font-size: 30px; 
+        font-size: 20px !important; 
 
     }
-
-    .bioname {
-        font-size: 30px;
-    }
-
-    .bio {
-        font-size: 2.8vw;
-        line-height: 2.0;  
-    }
-
-    .profilepic {
-        height: 50%;
-        width: 30%; 
-    }
-
-    address {
-        font-size: 25px; 
-    }
-
-
-}
-
-@media (max-width: 600px) {
-
-    .bioname {
-        font-size: 30px;
-        padding-bottom: 70px; 
-    }
-
-    #biobuild {
-        font-size: 25px; 
-
-    }
-
-    .biorow, .aboutrow {
-        height: 90%; 
-    }
-
-    .bio {
-        font-size: 3.0vw; 
-        line-height: 2.0; 
-    }
-
-    .profilepic {
-        height: 60%;
-        width: 40%; 
-    }
-
-    address {
-        padding-top: 50px; 
-        font-size: 20px; 
-    }
-
-}
-
-@media (max-width: 400px) {
-
-    .bioname {
-        font-size: 30px;
-        padding: 50px; 
-    }
-
-    #biobuild {
-        font-size: 20px; 
-
-    }
-    .aboutrow {
-        background: transparent;
-        border: none; 
+   
+    .biobox {
+        margin: 15px; 
+        display: inline-block;
         
     }
-    .biorow{
-        height: 90%; 
-        padding: 0; 
+
+    .bioindex {
+        margin: 15px; 
+        display: inline-block;
+    }
+   
+    .jumbotron {
+        margin-top: 30px !important; 
+        min-height: 450px !important;
+        padding-top: 30px !important; 
+        align-content: center; 
+    }
+    .bio {
+        font-size: 15px !important;
+        line-height: 1.0; 
+        color: black !important;
+        display: inline-block;
+     
+        
     }
 
-    .bio {
-        font-size: 4.8vw;
-        line-height: 1.5; 
-        color: black !important; 
-     
+    .bioname {
+        padding: 5px; 
     }
 
     .profilepic {
-        height: 75%;
-        width: 50%; 
-        float: none; 
+        height: 30%;
+        width: 30%; 
+        display: inline-block; 
     }
 
     .button {
-        width: 50%; 
-        font-size: 1px !important; 
-        right: 25%; 
+        height: 40px; 
+        width: 180px; 
+        font-size: 13px !important; 
+        background-color: darkgray;
+        position: relative;
+        left: 45%; 
+        margin-top: 50px; 
     }
 
     address {
