--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -108,11 +108,11 @@ a.email:link, a.email:visited {
     .connect, address, .sociallinks {
         padding-left: 5px;
         padding-right: 5px; 
-        margin-left: 20px; 
+       
     }
 
     .sociallinks {
-        padding-top: 20px; 
+        padding-top: 12px; 
     }
 
     address {
@@ -122,8 +122,8 @@ a.email:link, a.email:visited {
     }
     .wrapper{
         position: absolute;
-        left: 5%;
-        right: 5%; 
+        left: 20%;
+        right: 20%; 
     }
 
 
@@ -132,6 +132,20 @@ a.email:link, a.email:visited {
 @media (max-width: 520px) {
     .jumbotron {
         min-height: 450px !important; 
+    }
+
+    .social {
+        height: 75px;
+        width: 75px; 
+    }
+
+    .connect {
+        font-size: 15px;
+    }
+    .wrapper{
+        position: absolute;
+        left: 5%;
+        right: 5%; 
     }
 
 }
