updated button again

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -236,6 +236,9 @@ a.email:link, a.email:visited {
         padding: 5px; 
         left: 30%;
         right: 25%;
+        font-family: 'Montserrat', sans-serif;
     }
+
+    
 
 }
